--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         <FrameLayout
             android:id="@+id/home_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/posts_recyclerview"
@@ -69,9 +69,10 @@
     <Button
         android:id="@+id/create_post"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:text="Create a new post"
-        android:layout_gravity="bottom"
-        />
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorAccentt"
+        android:layout_gravity="bottom" />
 
 </FrameLayout>
