--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,26 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+    android:background="@color/md_material_blue_600"
     tools:context=".Login">
 
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/lottie_loading"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:visibility="gone"-->
-<!--        app:lottie_autoPlay="true"-->
-<!--        app:lottie_fileName="gears.json"-->
-<!--        app:lottie_loop="true" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textSize="32sp"
+        android:layout_margin="50dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/bold"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:layout_margin="10dp"
+        android:layout_margin="50dp"
         android:background="@drawable/common_google_signin_btn_text_light"
+        android:textColor="#000000"
         android:text="Login with Google"
         android:textSize="16sp"
         />
