--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,30 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
     tools:context=".Login">
 
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/lottie_loading"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:visibility="gone"-->
-<!--        app:lottie_autoPlay="true"-->
-<!--        app:lottie_fileName="gears.json"-->
-<!--        app:lottie_loop="true" />-->
+    <ImageView
+        android:id="@+id/header"
+        android:scaleType="fitStart"
+        android:visibility="gone"
+        android:src="@mipmap/header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ScrollView
+        android:overScrollMode="never"
+        android:layout_marginTop="90dp"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                fontPath="fonts/bold.ttf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hello there,"
+                android:textSize="32sp"
+                tools:ignore="MissingPrefix" />
+
+            <TextView
+                fontPath="fonts/bold.ttf"
+                android:layout_below="@+id/welcome_msg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="welcome back"
+                android:textSize="32sp"
+                tools:ignore="MissingPrefix" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email_holder"
+                android:hint="Email"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password_holder"
+                android:hint="Password"
+                app:passwordToggleEnabled="true"
+                android:layout_marginBottom="20dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/email_holder"
+                    android:inputType="textPassword"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:layout_gravity="center"
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:onClick="onForgotPassword"
+                android:text="Forgot your Password ?"
+                android:textColor="#989898"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_gravity="center"
+                android:id="@+id/button"
+                android:padding="10dp"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onLogin"
+                android:text="Sign In"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <ProgressBar
+                android:layout_marginTop="20dp"
+                android:id="@+id/progressBar2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:layout_margin="10dp"
-        android:background="@drawable/common_google_signin_btn_text_light"
-        android:text="Login with Google"
-        android:textSize="16sp"
-        />
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="bottom|center"
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onRegister"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:text="New here ? Sign Up instead"
+        android:textColor="#989898"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
 
-</RelativeLayout>
+
+</FrameLayout>
