--- a/app/src/main/res/layout/frag_about_profile.xml
+++ b/app/src/main/res/layout/frag_about_profile.xml
@@ -181,7 +181,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Getting user bio..."
+                        android:text="Getting userModel bio..."
                         android:gravity="center_horizontal"
                         />
 
